--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 <body>
 
-
+	<div class="container">
+		<form>
+		  First name:<br>
+		  <input type="text" name="firstName"><br>
+		  Last name:<br>
+		  <input type="text" name="lastName"><br>
+		  Email:<br>
+		  <input type="email" name="email"><br>
+		  Message:<br>
+		  <textarea rows="5" cols="50" name="message"></textarea><br>
+		  <input type="submit"><br>
+		</form>
+	</div>
 
     <script src="js/main.js"></script>
 </body>
