Style form so input areas are equal width

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		  Email:<br>
 		  <input type="email" name="email"><br>
 		  Message:<br>
-		  <textarea rows="5" cols="50" name="message"></textarea><br>
+		  <textarea name="message"></textarea><br>
 		  <input type="submit"><br>
 		</form>
 	</div>
