--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli\Changa+One" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
 	<main>
+
+		<h1>#NEVERAGAIN</h1>
+
 		<img src="img/march.png" id="logo">
+
+		<h2>#ENOUGHISENOUGH</h2>
 
 
 	</main>
