--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-	<link href="https://fonts.googleapis.com/css?family=Muli\Changa+One" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli|Changa+One" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
