Add image when h2 text is clicked

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
 
 		<h1>#NEVERAGAIN</h1>
 
-		<img src="img/march.png" id="logo">
+		<img src="img/march.png" id="logo" alt="March For Our Lives logo">
 
-		<article id=hidden></article>
+		<article class=hidden></article>
+
+		<article class=hidden></article>		
 
 		<h2>#ENOUGHISENOUGH</h2>
+
+
 
 
 	</main>
