Clean up styling

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 
 		<h1>#NEVERAGAIN</h1>
 
+		<article id="first"></article>
+
 		<img src="img/march.png" id="logo" alt="March For Our Lives logo">
 
-		<article class=hidden></article>
+		<article id="second"></article>
 
-		<article class=hidden></article>		
+		<article id="third"></article>	
 
 		<h2>#ENOUGHISENOUGH</h2>
 
