Add header and footer photos and style

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 	<main>
 
+		<header class="flex-container">
+			<img src="img/delaney.jpg">
+			<img src="img/names.jpg">
+			<img src="img/emma.jpg">
+			<img src="img/teacher-not-sharpshooter.jpg">
+		</header>
+
 		<h1>#NEVERAGAIN</h1>
 
 		<article id="first"></article>
@@ -24,6 +31,12 @@
 
 		<h2>#ENOUGHISENOUGH</h2>
 
+		<footer class="flex-container">
+			<img src="img/peanutbutter.jpg">
+			<img src="img/mlkjr-granddaughter.jpg">
+			<img src="img/texting-under-desk.jpg">
+			<img src="img/march-2.jpg">
+		</footer>
 
 
 
