Clean up layout and styling and add media queries

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>March for Our Lives</title>
     <meta name="description" content="">
 	<link href="https://fonts.googleapis.com/css?family=Muli|Changa+One" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
@@ -13,10 +13,10 @@
 	<main>
 
 		<header class="flex-container">
-			<img src="img/delaney.jpg">
-			<img src="img/names.jpg">
-			<img src="img/emma.jpg">
-			<img src="img/teacher-not-sharpshooter.jpg">
+			<img src="img/delaney.jpg" alt="Delaney Tarr">
+			<img src="img/names.jpg" alt="posters with names of student who were killed">
+			<img src="img/emma.jpg" alt="Emma Gonzalez">
+			<img src="img/teacher-not-sharpshooter.jpg" alt="I'm a teacher not a sharpshooter sign">
 		</header>
 
 		<h1>#NEVERAGAIN</h1>
@@ -32,17 +32,15 @@
 		<h2>#ENOUGHISENOUGH</h2>
 
 		<footer class="flex-container">
-			<img src="img/peanutbutter.jpg">
-			<img src="img/mlkjr-granddaughter.jpg">
-			<img src="img/texting-under-desk.jpg">
-			<img src="img/march-2.jpg">
+			<img src="img/peanutbutter.jpg" alt="child with sign saying he's not allowed to bring peanut butter to school">
+			<img src="img/mlkjr-granddaughter.jpg" alt="Martin Luther King, Jr.'s granddaughter with a Stoneman Douglas student">
+			<img src="img/texting-under-desk.jpg" alt="sign saying students doesn't want to have to text their parents I love you from under a desk">
+			<img src="img/march-2.jpg" alt="crowd at March for Our Lives">
 		</footer>
-
-
 
 	</main>
 
-
     <script src="js/main.js"></script>
+
 </body>
 </html>
