Add ids to form elements

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	<div class="container">
 		<form>
 		  First name:<br>
-		  <input type="text" name="firstName"><br>
+		  <input type="text" id="firstName" name="firstName"><br>
 		  Last name:<br>
-		  <input type="text" name="lastName"><br>
+		  <input type="text" id="lastName" name="lastName"><br>
 		  Email:<br>
-		  <input type="email" name="email"><br>
+		  <input type="email" id="email" name="email"><br>
 		  Message:<br>
 		  <textarea name="message"></textarea><br>
-		  <input type="submit"><br>
+		  <input type="submitForm" id="submit"><br>
 		</form>
 	</div>
 
