--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div class="container">
-		<form>
+		<form id="theForm">
 		  First name:<br>
 		  <input type="text" id="firstName" name="firstName"><br>
 		  Last name:<br>
@@ -19,8 +19,8 @@
 		  Email:<br>
 		  <input type="email" id="email" name="email"><br>
 		  Message:<br>
-		  <textarea name="message"></textarea><br>
-		  <input type="submitForm" id="submit"><br>
+		  <textarea name="message" id="message"></textarea><br>
+		  <input type="submit" id="submitButton"><br>
 		</form>
 	</div>
 
