--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div class="container">
-		<form id="theForm">
+		<form id="theForm" action="/action_page.php">
 		  First name:<br>
 		  <input type="text" id="firstName" name="firstName"><br>
 		  Last name:<br>
